--- a/style.css
+++ b/style.css
@@ -13,13 +13,24 @@ a{
   clear: both;
 }
 body{
-  background-color: #333;
-  color: yellow;
+  background-color: #efefef;
+  color: #333;
+}
+.icon {
+  width: 1em; 
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
 }
 
 /* topNavBar */
 .topNavBar{
-  padding-top: 25px;
+  padding: 24px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 .topNavBar .logo{
   float: left;
@@ -54,3 +65,102 @@ body{
 .topNavBar .nav li a:hover{
   border-bottom: 3px solid #DC6465;
 }
+
+/* banner */
+.banner{
+  height: 515px;
+  background: url(./images/rs-cover.jpg) center;
+  background-size: cover;
+}
+.banner .mask{
+  height: 515px;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+/* userCard */
+.userCard{
+  max-width: 940px;
+  background: white;
+  margin: 0 auto;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.3);
+}
+.userCard .pictureAndText{
+  padding: 50px;
+}
+.userCard .picture{
+  float: left;
+  margin-right: 65px;
+}
+.userCard .text{
+  float: left;
+  width: 470px;
+}
+.userCard .welcome{
+  padding: 4px 15px;
+  background: #e6686a;
+  line-height: 22px;
+  color: white;
+  position: relative;
+}
+.userCard .welcome .triangle{
+  width: 0;
+  height: 0;
+  border: 10px solid transparent;
+  border-left-color: #e6686a;
+  border-top-width: 0;
+  position: absolute;
+  left: 5px;
+  top: 100%;
+}
+.userCard .text h1{
+  margin: 24px 0 8px 0;
+}
+.userCard .text hr{
+  margin: 20px 0;
+  height: 0;
+  border: none;
+  border-top: 1px solid #dedede;
+}
+.userCard dl dt,
+.userCard dl dd{
+  float: left;
+  padding-bottom: 12px;
+}
+.userCard dl dt{
+  width: 30%;
+  font-weight: bold;
+}
+.userCard dl dd{
+  width: 70%;
+  color: #9da0a7;
+}
+.userCard .media{
+  background: #e6686a;
+  text-align: center;
+}
+.userCard .media a{
+  display: inline-block;
+  width: 36px;
+  line-height: 30px;
+  padding: 3px 0;
+  border-radius: 50%;
+  margin: 15px;
+}
+.userCard .media svg{
+  width: 1.8em;
+  height: 1.8em;
+  fill: white;
+  vertical-align: top;
+}
+.userCard .media a:hover{
+  background: #cf5d5f;
+}
+
+
+
+
+
+
+
+
+
