--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
   font-family: "Microsoft YaHei";
   font-weight: bold;
   font-size: 24px;
-  padding-left: 16px;
+  padding-left: 50px;
 }
 .topNavBar .logo .rs{
   color: #e6686a;
@@ -48,6 +48,7 @@ body{
 }
 .topNavBar .nav{
   float: right;
+  margin-right: 34px;
 }
 .topNavBar .nav li{
   float: left;
@@ -82,7 +83,8 @@ body{
   max-width: 940px;
   background: white;
   margin: 0 auto;
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.4);
+  margin-top: -340px;
 }
 .userCard .pictureAndText{
   padding: 50px;
@@ -155,12 +157,125 @@ body{
 .userCard .media a:hover{
   background: #cf5d5f;
 }
+main .download-wrapper{
+  text-align: center;
+}
+main .download-wrapper .downloadResume{
+  font-size: 14px;
+  font-weight: bold;
+  color: #3d4451;
+  line-height: 19px;
+  padding: 20px 55px;
+  border: 1px solid #cdcfd1;
+  display: inline-block;
+  margin: 32px 0;
+  border-radius: 3px;
+  transition: all 0.3s;
+}
+main .downloadResume:hover{
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.2);
+}
+main .introduce{
+  max-width: 940px;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 1.8;
+  font-size: 18px;
+}
 
+/* skill */
+section.skill,
+section.showreel{
+  max-width: 940px;
+  margin: 60px auto;
+}
+section.skill h2,
+section.showreel h2{
+  text-align: center;
+  color: #3d4451;
+  font-size: 34px;
+  line-height: 1.2;
+  font-weight: 600;
+}
+section.skill ol{
+  background: white;
+  padding: 42px 50px 10px;
+  box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.4);
+  margin-top: 30px;
+}
+section.skill ol li{
+  float: left;
+  width: 48%;
+  margin: 0 0 30px 0;
 
+}
+section.skill ol li:nth-child(even){
+  float: right;
+}
+section.skill ol li h3{
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.1;
+}
+section.skill .progressBar{
+  height: 5px;
+  background: #FAE1E1;
+  border-radius: 5px;
+  margin-top: 6px;
+}
+section.skill .progress{
+  height: 100%;
+  background: #E6686A;
+  width: 60%;
+  border-radius: 5px;
+}
 
+/* showreel */
+section.showreel{
+  text-align: center;
+  margin-bottom: 300px;
+}
+section.showreel nav{
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 32px;
+}
+section.showreel ol{
+  display: inline-block;
+  vertical-align: top;
+}
+section.showreel ol li{
+  float: left;
+  cursor: pointer;
+}
+section.showreel ol li:nth-child(2){
+  margin: 0 60px;
+}
+section.showreel nav .bar{
+  height: 5px;
+  border-radius: 5px;
+  background: white;
+  margin: 8px 0 25px 0;
+}
 
-
-
-
-
-
+section.showreel .bar-inner{
+  height: 100%;
+  width: 64px;
+  background: #E6686A;
+  border-radius: 5px;
+  transition: all 0.5s;
+}
+section.showreel .state-2 .bar-inner{
+  margin-left: 124px;
+}
+section.showreel .state-3 .bar-inner{
+  margin-left: 248px;
+}
+section.showreel .works{
+  position: relative;
+  height: 597px;
+}
+section.showreel .works .big,
+section.showreel .works .small{
+  position: absolute;
+}
